# firmware

./: .gitignore  .gitmodules  Makefile  README.md  bluepill.ld  can.ioc  main.ino  startup_stm32f103.s  uncrustify.cfg
.github/ISSUE_TEMPLATE/: bug-fix.md  feature-development.md
archive/bl_esus/: .cproject  .project  bluepill_can_test Debug.launch  bluepill_can_test.ioc
archive/bluepill_can_test/: .cproject  .project  bluepill_can_test Debug.launch  bluepill_can_test.ioc
archive/can_dev/: .cproject  .mxproject  can_dev Debug.launch
archive/esus_layout/: common.c  common.h  fl_ecu.c  fl_ecu.h  fr_ecu.c  rear_ecu.c  rl_ecu.h  rr_ecu.c
archive/rl_esus/: .mxproject
can/: .cproject  can Debug.launch  can.ioc
config/: README.md  serial_message_config.json
dashboard/: Dashboard.py  GaugeConfigurations.py  README.md  dashboard.py  gauge_constants.py  serial_communication.py
dashboard-compose/: Makefile  README.md  build.gradle.kts  gradle.properties  gradlew.bat
docs/: dashboard-compose.md  ecu.md  repo_map.md
ecu/: README.md
ir-sensor/: MLX90614.c  MLX90614.h  main.c
lib/: README.md
logs/: baja_log_20260116_0529.csv  baja_log_20260116_0534.csv  baja_log_20260116_0551.csv  baja_log_20260117_1915.csv  baja_log_20260117_1929.csv  baja_log_20260117_2029.csv  baja_log_20260117_2032.csv  baja_log_20260117_2034.csv  baja_log_20260117_2038.csv  baja_log_20260117_2253.csv  baja_log_20260118_0015.csv  baja_log_20260118_0405.csv  baja_log_20260127_2205.csv  baja_log_20260127_2242.csv  baja_log_20260127_2320.csv  baja_log_20260127_2327.csv  baja_log_20260127_2332.csv  baja_log_20260127_2341.csv  baja_log_20260127_2356.csv  baja_log_20260128_0005.csv  baja_log_20260131_1219.csv  baja_log_20260131_1305.csv  baja_log_20260131_1307.csv  baja_log_20260131_1311.csv  baja_log_20260131_1503.csv  baja_log_20260131_1504.csv  baja_log_20260131_1511.csv  baja_log_20260131_1518.csv  baja_log_20260131_1520.csv  baja_log_20260131_1532.csv  baja_log_20260131_1534.csv  baja_log_20260131_1536.csv  baja_log_20260131_1538.csv  baja_log_20260131_1539.csv  baja_log_20260131_1541.csv  baja_log_20260131_1542.csv  baja_log_20260131_1609.csv  baja_log_20260131_1611.csv  baja_log_20260131_1612.csv  baja_log_20260131_1613.csv  (+91 more)
main/: main.ino
projects/dash/: .gitignore  CMakeLists.txt  README.md
projects/dash/src/: main.cpp
projects/dash/src/config/: mochi.dbc
projects/dash/src/core/: can_dev.cpp  can_socket.cpp  can_socket.h  controls.cpp  controls.h  debug_socket.cpp  debug_socket.h  foxglove.cpp  foxglove.h  microphone.cpp  microphone.h  webcam.cpp  webcam.h  wheel.cpp  wheel.h
projects/dash/src/ui/: Gauge.qml  MusicPlayer.qml  main.qml
projects/dashboard-glfw/: CMakeLists.txt  Dockerfile  main.cpp
projects/dashboard-glfw/src/main/: main.cpp
projects/dashboard-vg/: .gitignore  CMakeLists.txt  Dockerfile
projects/dashboard-vg/Core/Src/: main.cpp
projects/dashboard_qt/: CMakeLists.txt  can_processing_to_data_share.md  main.cpp  mainwindow.cpp  mainwindow.ui  toolchain_configs_reference.txt
projects/dashboard_qt/Core/Inc/: can_bridge.h  can_handler.h  can_id.h  can_processor.h  can_translator.h  data_manager.h  mainwindow.h  mcap_logger.h  uart_handler.h
projects/dashboard_qt/Core/Src/: can_bridge.cpp  can_handler.cpp  can_processor.cpp  can_translator.cpp  data.proto  data_manager.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mcap_logger.cpp  mcap_writer.cpp  nrf24_handler.cpp  uart_handler.cpp
projects/dashboard_qt/Resources/: resources.qrc
projects/minimaldash/: CMakeLists.txt  README.md
projects/minimaldash/assets/dbc/: mochi.c  mochi.dbc  mochi.h  test.dbc  wheel.dbc
projects/minimaldash/cmake/: patch_foxglove_parameter.cmake
projects/minimaldash/src/: main.cpp
projects/minimaldash/src/core/: cansocket.cpp  cansocket.h  dash.h  dbcparser.cpp  dbcparser.h  foxglove.cpp  foxglove.h  settings.h
projects/minimaldash/src/peripherals/: webcam.cpp  webcam.h
projects/minimaldash/src/ui/: Debug.qml  Indicator.qml  Speedometer.qml  Tachometer.qml  main.qml
projects/pit_telemetry/: CMakeLists.txt  pit_telemetry.service
projects/pit_telemetry/Core/Inc/: data_manager.h  mcap_logger.h  nrf24_handler.h
projects/pit_telemetry/Core/Src/: data.proto  main.cpp  nrf24_handler.cpp
projects/ros2can/src/stm32_can_bridge/: CMakeLists.txt  package.xml
projects/ros2can/src/stm32_can_bridge/config/stm32_bus/: bus.yml  fl_ecu.eds  fr_ecu.eds  rear_ecu.eds  rl_ecu.eds  rr_ecu.eds
projects/ros2can/src/stm32_can_bridge/config/stm32_bus/can/: rear_ecu.md  rear_ecu.xdd  rr_ecu.md
projects/ros2can/src/stm32_can_bridge/config/stm32_bus/can/1rr_ecu/: OD.h  rr_ecu.eds  rr_ecu.xdd
projects/ros2can/src/stm32_can_bridge/config/stm32_bus/can/1rr_ecu_50ms/: OD.c  OD.h  rr_ecu.dcf  rr_ecu.eds  rr_ecu.xdd
projects/ros2can/src/stm32_can_bridge/config/stm32_bus/can/2rl_ecu/: OD.c  OD.h  rl_ecu.dcf  rl_ecu.eds  rl_ecu.xdd
projects/ros2can/src/stm32_can_bridge/config/stm32_bus/can/3fr_ecu/: OD.h  fr_ecu.eds  fr_ecu.xdd
projects/ros2can/src/stm32_can_bridge/config/stm32_bus/can/4fl_ecu/: OD.c  OD.h  fl_ecu.dcf  fl_ecu.eds  fl_ecu.xdd
projects/ros2can/src/stm32_can_bridge/config/stm32_bus/can/5rear_ecu/: OD.c  rear_ecu.eds  rear_ecu.xdd
projects/ros2can/src/stm32_can_bridge/config/stm32_bus/can/fl_ecu/: OD.c  fl_ecu.xdd
projects/ros2can/src/stm32_can_bridge/config/stm32_bus/can/fr_ecu/: OD.h  fr_ecu.dcf  fr_ecu.eds  fr_ecu.xdd
projects/ros2can/src/stm32_can_bridge/config/stm32_bus/can/rear_ecu/: OD.h  rear_ecu.dcf  rear_ecu.eds
projects/ros2can/src/stm32_can_bridge/config/stm32_bus/can/rl_ecu/: OD.h  rl_ecu.eds  rl_ecu.xdd
projects/ros2can/src/stm32_can_bridge/config/stm32_bus/can/rr_ecu/: rr_ecu.eds  rr_ecu.xdd
projects/ros2can/src/stm32_can_bridge/launch/: canopen.launch.py
projects/ros2can/src/stm32_can_bridge/scripts/: tpdo_republisher.py
projects/ros2can/src/stm32_can_bridge/src/: demuxer.py
scripts/: README.md  convert_hex_to_decimal.py  copy_libs_arduino.py  parse_canbus_test.py  plot.py
sensor/: README.md
src/: main.c  rear_ecu.h  rl_ecu.c  rr_ecu.h
(+516 files in other folders)
