<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>stm32_can_bridge</name>
    <version>0.0.0</version>
    <description>CANopen Proxy Bridge for STM32 nodes</description>
    <maintainer email="user@todo.todo">User</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>canopen_core</depend>
    <depend>canopen_master_driver</depend>
    <depend>canopen_proxy_driver</depend>
    <depend>lely_core_libraries</depend>


    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>